MOBI-508 menuButton layout issues - add text-align: left to inner span
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@32293 1de00972-ac04-4911-a46b-06793c8d78d9

--- a/resources/themes/base/1_menubutton.css
+++ b/resources/themes/base/1_menubutton.css
@@ -21,6 +21,7 @@
     width: 125px;
     height: 20px;
     position: absolute;
+    text-align:left;
 }
 
 .mobi-menu-btn-btn span {
